@@ -1,4 +1,4 @@
-=head1 Changes in DBD-Oracle 1.16 (svn rev 509)   21st October 2004
+=head1 Changes in DBD-Oracle 1.16 (svn rev 515)   22nd October 2004
 
   NOTE:
   This release has major changes to Unicode support. See below.
@@ -47,6 +47,7 @@
     Corrected typo in ora_lob_read() example thanks to Johannes Wierny.
     Corrected LOB example thanks to Sascha Pfalz and Thomas Upton.
     Updated README.macosx thanks to Hilmar Lapp.
+    Updated README.hpux thanks to Gram Ludlow and Lincoln Baxter.
     Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
     Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
     Added gcc example to README.aix thanks to Adrian Terranova.
